--- a/css/style.css
+++ b/css/style.css
@@ -1,302 +1,3 @@
-/*!
- * Bootstrap Reboot v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
- */
-*, ::after, ::before {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
-}
-
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-  display: block;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background-color: #fff;
-}
-
-[tabindex="-1"]:focus {
-  outline: 0 !important;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-abbr[data-original-title], abbr[title] {
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
-  cursor: help;
-  border-bottom: 0;
-  -webkit-text-decoration-skip-ink: none;
-  text-decoration-skip-ink: none;
-}
-
-address {
-  margin-bottom: 1rem;
-  font-style: normal;
-  line-height: inherit;
-}
-
-dl, ol, ul {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-ol ol, ol ul, ul ol, ul ul {
-  margin-bottom: 0;
-}
-
-dt {
-  font-weight: 700;
-}
-
-dd {
-  margin-bottom: 0.5rem;
-  margin-left: 0;
-}
-
-blockquote {
-  margin: 0 0 1rem;
-}
-
-b, strong {
-  font-weight: bolder;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub, sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-}
-
-a:hover {
-  color: #0056b3;
-  text-decoration: underline;
-}
-
-a:not([href]):not([tabindex]) {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:not([href]):not([tabindex]):focus {
-  outline: 0;
-}
-
-code, kbd, pre, samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  font-size: 1em;
-}
-
-pre {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  overflow: auto;
-}
-
-figure {
-  margin: 0 0 1rem;
-}
-
-img {
-  vertical-align: middle;
-  border-style: none;
-}
-
-svg {
-  overflow: hidden;
-  vertical-align: middle;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-caption {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  color: #6c757d;
-  text-align: left;
-  caption-side: bottom;
-}
-
-th {
-  text-align: inherit;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-}
-
-button {
-  border-radius: 0;
-}
-
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
-
-button, input, optgroup, select, textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-button, input {
-  overflow: visible;
-}
-
-button, select {
-  text-transform: none;
-}
-
-select {
-  word-wrap: normal;
-}
-
-[type=button], [type=reset], [type=submit], button {
-  -webkit-appearance: button;
-}
-
-[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
-  cursor: pointer;
-}
-
-[type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner, button::-moz-focus-inner {
-  padding: 0;
-  border-style: none;
-}
-
-input[type=checkbox], input[type=radio] {
-  box-sizing: border-box;
-  padding: 0;
-}
-
-input[type=date], input[type=datetime-local], input[type=month], input[type=time] {
-  -webkit-appearance: listbox;
-}
-
-textarea {
-  overflow: auto;
-  resize: vertical;
-}
-
-fieldset {
-  min-width: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-legend {
-  display: block;
-  width: 100%;
-  max-width: 100%;
-  padding: 0;
-  margin-bottom: 0.5rem;
-  font-size: 1.5rem;
-  line-height: inherit;
-  color: inherit;
-  white-space: normal;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type=search] {
-  outline-offset: -2px;
-  -webkit-appearance: none;
-}
-
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
-}
-
-output {
-  display: inline-block;
-}
-
-summary {
-  display: list-item;
-  cursor: pointer;
-}
-
-template {
-  display: none;
-}
-
-[hidden] {
-  display: none !important;
-}
-
-
 @font-face {
   font-family: "Venus Rising";
   src: url("../fonts/VenusRisingCyrillic.woff2") format("woff2"), url("../fonts/VenusRisingCyrillic.woff") format("woff");
@@ -309,17 +10,7 @@ template {
   font-weight: 400;
   font-style: normal;
 }
-@keyframes heartbeat {
-  from {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.4);
-  }
-  to {
-    transform: scale(1);
-  }
-}
+
 *, *::after, *::before {
   padding: 0;
   margin: 0;
@@ -1181,22 +872,21 @@ html, body {
 }
 .study__position {
   margin-left: 10px;
-  border: 1px solid #000;
+  border: 2px solid #000;
 }
 .study__card {
   display: flex;
   width: 100%;
   max-height: 120px;
-  border: 1px solid #000;
+  border: 2px solid #000;
   border-radius: 10px;
   box-sizing: border-box;
 }
-.study__card:hover {
+.study__card.card-active {
   box-sizing: border-box;
-  border: 1px solid #297ABF;
+  border: 2px solid #297ABF;
   transition: all 0.3s ease;
   cursor: pointer;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), -23px 0 20px -23px rgba(0, 0, 0, 0.6), 23px 0 20px -23px rgba(0, 0, 0, 0.6), inset 0 0 40px rgba(0, 0, 0, 0.1);
 }
 .study__card__icon {
   padding: 2px;
@@ -1216,10 +906,6 @@ html, body {
   box-sizing: border-box;
 }
 .study__wrapper-right:hover {
-  border: 1px solid #297ABF;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), -23px 0 20px -23px rgba(0, 0, 0, 0.6), 23px 0 20px -23px rgba(0, 0, 0, 0.6), inset 0 0 40px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
 }
 .study__wrapper-right ul {
@@ -1280,7 +966,6 @@ html, body {
   border: 2px solid #297ABF;
   transition: all 0.3s ease;
   cursor: pointer;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), -23px 0 20px -23px rgba(0, 0, 0, 0.6), 23px 0 20px -23px rgba(0, 0, 0, 0.6), inset 0 0 40px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
 }
 
@@ -1289,6 +974,9 @@ html, body {
 }
 
 @media screen and (max-width: 768px) {
+  .study {
+    margin-bottom: 30px;
+  }
   .study__wrapper {
     flex-direction: column;
   }
@@ -1356,6 +1044,7 @@ html, body {
     border-radius: 10px;
     border: 2px solid #DCE7FC;
     box-sizing: border-box;
+    margin-bottom: 20px;
   }
   .study__wrapper-mobile p:hover {
     border: 2px solid #297ABF;
@@ -1366,6 +1055,380 @@ html, body {
   }
   .mentors__wrapper-btn .button-mobile {
     padding: 10px 40px;
+  }
+}
+.progress {
+  margin-bottom: 120px;
+}
+.progress__header > .title {
+  font-size: 30px;
+  line-height: 38px;
+}
+.progress__wrapper {
+  background: #FFFFFF;
+  border: 1px solid #0B2235;
+  border-radius: 15px;
+  padding: 40px 20px;
+  display: flex;
+}
+.progress__wrapper > span {
+  max-width: 264px;
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #232523;
+}
+.progress__block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  justify-content: space-around;
+  position: relative;
+}
+.progress__block::after {
+  position: absolute;
+  content: "";
+  width: 90%;
+  height: 2px;
+  border-bottom: 1px solid #000;
+  top: 65%;
+}
+.progress__subtitle {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #232523;
+  margin-bottom: 32px;
+}
+.progress__table {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.progress__stage {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.progress__stage:after {
+  position: absolute;
+  content: "";
+  top: 42%;
+  left: 35px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: rgb(9, 9, 121);
+  background: radial-gradient(circle, rgb(9, 9, 121) 41%, rgba(41, 122, 191, 0.7) 122%, rgb(17, 36, 137) 191%);
+  z-index: 2;
+}
+.progress__stage.stage1::before {
+  position: absolute;
+  content: "";
+  top: 40%;
+  left: 33.5px;
+  width: 11px;
+  height: 11px;
+  background: #587892;
+  border-radius: 50%;
+  z-index: 1;
+}
+.progress__stage.stage2::before {
+  position: absolute;
+  content: "";
+  top: 38%;
+  left: 31.5px;
+  width: 16px;
+  height: 16px;
+  background: #587892;
+  border-radius: 50%;
+  z-index: 1;
+}
+.progress__stage.stage3::before {
+  position: absolute;
+  content: "";
+  top: 36%;
+  left: 29px;
+  width: 20px;
+  height: 20px;
+  background: #587892;
+  background: radial-gradient(circle, rgb(77, 77, 125) 47%, rgba(41, 122, 191, 0.7) 122%, rgb(198, 199, 204) 191%);
+  border-radius: 50%;
+  z-index: 1;
+}
+.progress__stage.stage4::before {
+  position: absolute;
+  content: "";
+  top: 34%;
+  left: 27px;
+  width: 24px;
+  height: 24px;
+  background: #587892;
+  background: radial-gradient(circle, rgb(77, 77, 125) 47%, rgba(41, 122, 191, 0.7) 122%, rgb(198, 199, 204) 191%);
+  border-radius: 50%;
+  z-index: 1;
+}
+.progress__stage-price {
+  text-align: center;
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FD460E;
+  margin-bottom: 40px;
+  margin-left: 24px;
+}
+.progress__stage-rank {
+  text-align: center;
+  position: relative;
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #232523;
+}
+.progress__stage-rank span {
+  display: block;
+  margin-top: 4px;
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #BDBDBD;
+}
+
+@media screen and (max-width: 830px) {
+  .progress {
+    margin-bottom: 20px;
+  }
+  .progress__header > .title {
+    font-family: "Venus Rising";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    /* or 21px */
+    color: #232523;
+  }
+  .progress__wrapper {
+    background: #FFFFFF;
+    border: none;
+    border-radius: 15px;
+    padding: 0px;
+    display: flex;
+  }
+  .progress__wrapper > span {
+    display: none;
+  }
+  .progress__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+    position: relative;
+  }
+  .progress__block::after {
+    display: none;
+  }
+  .progress__subtitle {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    color: #FD460E;
+    margin-bottom: 10px;
+  }
+  .progress__table {
+    display: flex;
+    flex-direction: column;
+  }
+  .progress__stage {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    background: #FFFFFF;
+    border: 1px solid rgba(11, 34, 53, 0.3);
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+  .progress__stage:after {
+    top: 47%;
+    left: 85px;
+    width: 4px;
+    height: 4px;
+    background: rgb(9, 9, 121);
+    background: radial-gradient(circle, rgb(9, 9, 121) 41%, rgba(41, 122, 191, 0.7) 122%, rgb(17, 36, 137) 191%);
+  }
+  .progress__stage.stage1::before {
+    top: 44%;
+    left: 83.5px;
+    width: 7px;
+    height: 7px;
+  }
+  .progress__stage.stage2::before {
+    top: 43%;
+    left: 82.5px;
+    width: 9px;
+    height: 9px;
+  }
+  .progress__stage.stage3::before {
+    top: 41%;
+    left: 81.5px;
+    width: 11px;
+    height: 11px;
+  }
+  .progress__stage.stage4::before {
+    top: 39%;
+    left: 79.5px;
+    width: 14px;
+    height: 14px;
+  }
+  .progress__stage-price {
+    text-align: left;
+    position: relative;
+    font-size: 14px;
+    line-height: 16px;
+    color: #FD460E;
+    width: 40%;
+    margin-bottom: 0;
+    margin-left: 20px;
+  }
+  .progress__stage-rank {
+    flex: 0 0 60%;
+    text-align: left;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    padding-top: 14px;
+  }
+  .progress__stage-rank span {
+    padding-bottom: 15px;
+    font-size: 14px;
+    line-height: 16px;
+    color: #BDBDBD;
+  }
+}
+.quiz__elem {
+  position: relative;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
+  padding: 28px 20px;
+  color: #232523;
+  border: 1px solid #DCE7FC;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  transition: all 0.4s ease;
+}
+.quiz__elem > span {
+  position: absolute;
+  right: 30px;
+}
+.quiz__elem:hover > span {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+}
+.quiz__elem::after {
+  position: absolute;
+  content: blacktriangledown;
+  width: 3px;
+  height: 3px;
+  color: #f00;
+}
+.quiz__elem-text {
+  display: none;
+  border-top: 1px solid #DCE7FC;
+  transition: all 0.4s ease;
+  padding-top: 15px;
+}
+
+.elem-1:hover .text-1 {
+  display: block;
+  transition: all 0.4s ease;
+}
+
+.elem-2:hover .text-2 {
+  display: block;
+}
+
+.elem-3:hover .text-3,
+.elem-4:hover .text-4,
+.elem-5:hover .text-5,
+.elem-6:hover .text-6,
+.elem-7:hover .text-7 {
+  display: block;
+}
+
+.contacts .title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 120%;
+  color: #232523;
+  text-align: center;
+}
+.contacts input,
+.contacts textarea,
+.contacts select {
+  outline: 1px solid #0B2235;
+  background: #FFFFFF;
+  border: 1px solid #0B2235;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  padding: 0 20px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+.contacts select {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 120%;
+  /* identical to box height, or 17px */
+  color: #232523;
+}
+.contacts .textareaBlog {
+  padding: 20px 20px 0;
+  background-color: #f00;
+}
+.contacts__wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr 2fr;
+  row-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.contacts .firstName {
+  grid-column-start: span 2;
+}
+.contacts textarea {
+  grid-column-start: span 3;
+}
+
+@media screen and (max-width: 768px) {
+  .contacts__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
   }
 }
 .button {
@@ -1482,3 +1545,5 @@ html, body {
     padding-bottom: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
+
+
