--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap);
-
 @font-face {
   font-family: "Venus Rising";
   src: url(../fonts/VenusRisingCyrillic.woff2) format("woff2"), url(../fonts/VenusRisingCyrillic.woff) format("woff");
@@ -30,6 +28,7 @@ p {
 
 a {
   text-decoration: none;
+  color: #232523;
 }
 
 menu,
@@ -194,8 +193,8 @@ ul {
 }
 
 .header .mob-menu .menu__nav li {
-  padding: 20px 0 20px 40px;
-  font-size: 16px;
+  padding: 12px 0 10px 40px;
+  font-size: 10px;
   text-transform: uppercase;
 }
 
@@ -1047,6 +1046,10 @@ section.feedback .tutors-card__tutor {
 }
 
 .faq {
+  margin-bottom: 40px;
+}
+
+.faq .accordion {
   margin-bottom: 20px;
 }
 
@@ -1062,6 +1065,7 @@ section.feedback .tutors-card__tutor {
   font-size: 14px;
   line-height: 120%;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .accordion__item.active .accordion__content {
@@ -1091,7 +1095,6 @@ section.feedback .tutors-card__tutor {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  cursor: pointer;
 }
 
 .accordion__header::after {
@@ -1111,6 +1114,12 @@ section.feedback .tutors-card__tutor {
 
   .accordion .accordion__content {
     font-size: 16px;
+  }
+
+  .accordion__header::after {
+    width: 20px;
+    height: 20px;
+    background-size: contain;
   }
 }
 
